--- a/packages/tools/docusaurus/src/css/custom.css
+++ b/packages/tools/docusaurus/src/css/custom.css
@@ -82,3 +82,31 @@ code {
 .ch-code-scroll-content > div {
   transform: translateX(0px) translateY(19px) scale(1) !important;
 }
+
+.ch-spotlight-sticker {
+  width: var(--ch-scrollycoding-sticker-width, 420px);
+}
+
+.ch-scrollycoding-step-content,
+.ch-spotlight-tab {
+  padding: var(--ks-spacing-inset-s) var(--ks-spacing-inset-s);
+  --ifm-heading-margin-bottom: var(--ks-spacing-stack-xs);
+}
+
+.ch-scrollycoding-step-content,
+.ch-spotlight-tab {
+  border-radius: var(--ks-border-radius-card);
+}
+
+.ch-scrollycoding-step-content[data-selected],
+.ch-spotlight-tab:hover,
+.ch-spotlight-tab[data-selected] {
+  border-color: var(--ks-border-color-accent);
+  box-shadow: var(--ks-box-shadow-card-hover);
+  border-radius: var(--ks-border-radius-card);
+}
+
+.ch-scrollycoding,
+.ch-spotlight {
+  gap: var(--ks-spacing-s);
+}
