--- a/packages/tools/docusaurus/src/css/mapping.css
+++ b/packages/tools/docusaurus/src/css/mapping.css
@@ -293,7 +293,7 @@
   --ifm-dropdown-font-weight: var(--ifm-font-weight-semibold);
   --ifm-dropdown-link-color: var(--ifm-font-color-base);
   --ifm-dropdown-hover-background-color: var(--ifm-hover-overlay);
-  --ifm-footer-background-color: var(--ifm-color-emphasis-100);
+  --ifm-footer-background-color: #012a34;
   --ifm-footer-color: inherit;
   --ifm-footer-link-color: var(--ifm-color-emphasis-700);
   --ifm-footer-link-hover-color: var(--ifm-color-primary);
@@ -310,7 +310,7 @@
   --ifm-menu-color-background-hover: var(--ifm-hover-overlay);
   --ifm-menu-link-padding-horizontal: 0.75rem;
   --ifm-menu-link-padding-vertical: 0.375rem;
-  --ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgba(0,0,0,0.5)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
+  --ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgba(0,0,0,1)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
   --ifm-menu-link-sublist-icon-filter: none;
   --ifm-navbar-background-color: var(--ifm-background-surface-color);
   --ifm-navbar-height: 3.75rem;
