--- a/packages/tools/docusaurus/src/css/section-preview.css
+++ b/packages/tools/docusaurus/src/css/section-preview.css
@@ -16,11 +16,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--ks-color-primary-inverted);
+  color: var(--ks-color-fg);
   font-weight: var(--ks-font-weight-bold);
-  width: 100%;
   height: 80px;
-  background-color: var(--ks-background-color-primary);
+  background-color: var(--ks-color-fg-alpha-3);
 }
 
 .col-fill .l-section__container {
@@ -39,4 +38,23 @@
 .col-limit .l-section__container {
   --l-section_col--repeat: 3 !important;
   --l-section_col--min-width: 5rem !important;
+}
+
+.section-background-table thead {
+  border-bottom: 1px solid var(--ks-background-color-accent) !important;
+}
+
+.section-background-table tbody tr td {
+  border: 0 !important;
+}
+
+.section-background-table tbody tr:nth-child(1) {
+}
+
+.section-background-table tbody tr:nth-child(2) {
+  background-color: var(--ks-color-primary-inverted);
+}
+
+.section-background-table tbody tr:nth-child(3) {
+  background-color: var(--ks-background-color-accent);
 }
