--- a/packages/tools/docusaurus/src/css/_section.scss
+++ b/packages/tools/docusaurus/src/css/_section.scss
@@ -1,5 +1,5 @@
 .l-section {
-  --l-section--background: var(--ifm-background-color);
+  --l-section--background-default: var(--ifm-background-color);
 }
 
 .content-nav .l-section__container {
