--- a/packages/components/base/source/section/_section-vars.scss
+++ b/packages/components/base/source/section/_section-vars.scss
@@ -5,28 +5,35 @@ $host: (
     content-width-narrow: 46.5rem,
     content-width-default: 62rem,
     content-width-wide: 75rem,
+    content-width-max: 120rem,
+    content-width-full: 120rem,
     content-padding: var(--ks-spacing-m),
-    background: var(--ks-background-color-default),
-    space: var(--ks-spacing-xxl),
-    space-small: calc(var(--l-section--space) / 2),
+    background-default: var(--ks-background-color-default),
+    background-accent: var(--ks-background-color-accent),
+    background-bold: var(--ks-color-fg-alpha-4),
+    space-default: var(--ks-spacing-xxl),
+    space-small: calc(var(--l-section--space-default) / 2),
+    gutter-small: var(--ks-spacing-xs),
+    gutter-default: var(--ks-spacing-m),
+    gutter-large: var(--ks-spacing-xl),
+  ),
+  '.l-section': (
+    background: var(--l-section--background-default),
   ),
   '.l-section--accent': (
-    background: var(--ks-background-color-accent),
+    background: var(--l-section--background-accent),
   ),
-) !default;
-
-$container: (
+  '.l-section--bold': (
+    background: var(--l-section--background-bold),
+  ),
   '.l-section__container': (
-    gutter: var(--ks-spacing-m),
-  ),
-  '.l-section__container--gutter-large': (
-    gutter: var(--ks-spacing-xl),
+    gutter: var(--l-section--gutter-default),
   ),
   '.l-section__container--gutter-small': (
-    gutter: var(--ks-spacing-xs),
+    gutter: var(--l-section--gutter-small),
   ),
-  '.l-section__container--gutter-none': (
-    gutter: 0,
+  '.l-section__container--gutter-large': (
+    gutter: var(--l-section--gutter-large),
   ),
 ) !default;
 
