--- a/packages/components/base/source/headline/_headline-vars.scss
+++ b/packages/components/base/source/headline/_headline-vars.scss
@@ -2,12 +2,18 @@ $name-: 'c-headline' !default;
 
 $host: (
   '.c-headline': (
-    margin-bottom: (
-      0: 1rem,
-      960: 2rem,
-    ),
+    space-after-minimum: 0,
+    space-after-small: var(--ks-spacing-stack-s),
+    space-after-large: var(--ks-spacing-stack-l),
+    space-after: var(--c-headline--space-after-minimum),
     font-weight: var(--c-rich-text_headline--font-weight),
     color: var(--c-rich-text_headline--color),
+  ),
+  '.c-headline--space-after-small': (
+    space-after: var(--c-headline--space-after-small),
+  ),
+  '.c-headline--space-after-large': (
+    space-after: var(--c-headline--space-after-large),
   ),
 ) !default;
 
