--- a/packages/tools/docusaurus/src/css/_custom.scss
+++ b/packages/tools/docusaurus/src/css/_custom.scss
@@ -91,3 +91,7 @@ code,
   [id] {
   scroll-margin-top: calc(var(--g-scroll-offset) + 1.5rem);
 }
+
+.menu {
+  font-weight: var(--ks-font-weight-regular);
+}
